--- a/my hobbies and ideals.html
+++ b/my hobbies and ideals.html
@@ -8,7 +8,7 @@
 
 <body style="background-color: #BDE718; color: #000000; font-size: 36px;">
 	<button  class="btn" type="button" >
-  <strong ><a href="image/lbxx.html" style="font-size: 36px"> 返回主页</a></strong>
+  <strong ><a href="image/index.html" style="font-size: 36px"> 返回主页</a></strong>
   <div id="container-stars">
     <div id="stars"></div>
 </div>
