--- a/myschool.html
+++ b/myschool.html
@@ -8,7 +8,7 @@
 
 <body style="background-color: #21CAD7; color: #8A1ADA; font-size: 24px;">
 	<button  class="btn" type="button" >
-  <strong ><a href="lbxx.html" style="font-size: 36px"> 返回主页</a></strong>
+  <strong ><a href="index.html" style="font-size: 36px"> 返回主页</a></strong>
   <div id="container-stars">
     <div id="stars"></div>
 </div>
