--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <table width="100%" border="1">
           <tbody>
             <tr>
-              <td width="20%" align="center" valign="middle">&nbsp;<em><a href="lbxx.html"><strong>首页</strong></a></em></td>
+              <td width="20%" align="center" valign="middle">&nbsp;<em><a href="index.html"><strong>首页</strong></a></em></td>
               <td width="20%" align="center" valign="middle"><a  href="myschool.html">&nbsp;<em><strong>我的学校</strong></em></a></td>
               <td width="20%" align="center" valign="middle">&nbsp;<a href="myhometown.html"><em><strong>我的家乡</strong></em></a></td>
 <td width="20%" align="center" valign="middle">&nbsp;<em><a href="myhobbiesandideals.html"><strong>我的爱好和理想</strong></a></em></td>
